syntax = "proto3";

package metrics;
option go_package = "./proto";

service MetricCollector {
  // Client-side streaming: Agent sends many messages, Server sends one back
  rpc StreamMetrics (stream MetricRequest) returns (MetricResponse);
}

message MetricRequest {
  string agent_id = 1;
  float cpu_usage = 2;
  uint64 mem_total = 3;
  uint64 mem_avail = 4;
}

message MetricResponse {
  bool success = 1;
  string message = 2;
}